# basic_project

./: CMakeLists.txt  chain.cpp  chain.h  chain_val.h  crossword.cpp  crossword.h  field.cpp  field.h  finder.cpp  finder.h  main.cpp
examples/: for_test.jcs  for_test1.jcs  for_test2.jcs  for_test3.jcs  for_test4.jcs
